--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alegra-node-api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Alegras Node API with types",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc -w",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "npm run build",
