--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alegra-node-api",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "description": "Alegras Node API with types",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "tsc -w",
+    "dev": "tsc -w",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -33,15 +33,15 @@
   "author": "Juan Pablo Solano",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "axios-cache-adapter": "^2.5.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/node": "^14.0.13",
+    "@types/node": "^17.0.5",
     "prettier": "^2.0.5",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.9.5"
+    "typescript": "^4.5.4"
   }
 }
