--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
   "author": "Juan Pablo Solano",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0",
-    "axios-cache-adapter": "^2.5.0"
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/node": "^17.0.5",
+    "@types/node": "^17.0.45",
     "prettier": "^2.0.5",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
